Multiple procrastinated fixes - Fixed modals in dark mode; - Fixed theme previews not changing according to selected Chromium design (fixed button style getting leaked into gsettings with another method); - Fixed chromemargin not applying properly when toggling Firefox titlebar on Windows; - Chrome Menu about entry now updates browser name (branding); - Fixed toolbarbutton icon shadow being doubled in extension buttons; - Fixed Firefox forcing dark mode palette in urlbarView - sometimes, items are still unreadable, but at least it doesn't force the ugly Firefox dark mode colours anymore...; - GTK+ document icon in URL bar does not overflow anymore; - Chromium 47 applies its own button style to downloads bar dangerous action buttons now; - Hovering in settings in Chromium 21+ does not make it unreadable in dark mode anymore; - Fixed splash screen "Start from scratch" button style issue; - Fixed splash screen text being black in dark mode.

--- a/Profile Folder/chrome/frameworks/GeckiumMaterial/styles/partials/_dialog.scss
+++ b/Profile Folder/chrome/frameworks/GeckiumMaterial/styles/partials/_dialog.scss
@@ -28,8 +28,11 @@
             
             
 
-            
-            
+            @media (prefers-color-scheme: dark) {
+                --header-text-color: rgb(255, 255, 255, 86%);
+                --description-text-color: rgba(255, 255, 255, 0.6);
+            }
+
             
             
             
